sync beneficiaries with bims tetfund instutions

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,4 @@ BIMS_REDIRECT_URI="http://localhost:8000"
 BIMS_REGISTERATION_URI="https://bims.tetfund.gov.ng/api/auth/register"
 BIMS_IS_ENABLED=true
 BIMS_AUTHORIZATION_URI="https://bims.tetfund.gov.ng/oauth/token"
+BIMS_API_BASE_URL="https://bims.tetfund.gov.ng/api"
